<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:gravity="left"
                android:text="@string/txtSmallTitle"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small_size" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#e9e9eb"></ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/setting_small_bac"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="left"
                        android:text="@string/txtSiwtch"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <ToggleButton
                        android:id="@+id/switch_bea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="15dp"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9eb"></ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/setting_small_bac"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txtUUID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="left"
                        android:text="@string/txtUUID"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etUUID"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@+id/txtUUID"
                        android:background="@null"
                        android:gravity="right"
                        android:hint="uuid"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9eb"></ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/setting_small_bac"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="left"
                        android:text="@string/txtName"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@+id/txtName"
                        android:background="@null"
                        android:gravity="right"
                        android:hint="@string/txtName"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9eb"></ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/setting_small_bac"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txtMajor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="left"
                        android:text="@string/txtMajor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etMajor"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@+id/txtMajor"
                        android:background="@null"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9eb"></ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/setting_small_bac"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txtMinor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="left"
                        android:text="@string/txtMinor"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etMinor"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@+id/txtMinor"
                        android:background="@null"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9eb"></ImageView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/setting_small_bac"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txtMP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="15dp"
                        android:gravity="left"
                        android:text="@string/txtMeasuredPower"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/etMP"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="15dp"
                        android:layout_toRightOf="@+id/txtMP"
                        android:background="@null"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9eb"></ImageView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="start" />

                <Button
                    android:id="@+id/stop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="stop" />
            </LinearLayout>

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="搜索"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
